- CS_290 assignment 2 work

--- a/CS_290/assignment2/content.html
+++ b/CS_290/assignment2/content.html
@@ -1,9 +1,69 @@
 <html>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <title>CS_290: Assignment 2 - HTML/CSS</title>
 
 <body>
-  Howdy!
+
+<dl>
+  <dt>Username:</dt><dd>praterj</dd>
+  <dt>Favorite Food:</dt><dd>Pizza</dd>
+  <dt>Favorite Drink:</dt><dd>Craft IPA</dd>
+</dl>
+
+<table class="customTable">
+  <tr>
+    <th class="customTable-assignment2"></th>
+    <th class="customTable-assignment2">Name</th>
+    <th class="customTable-assignment2">Location</th>
+    <th class="customTable-assignment2">Occupation</th>
+    <th class="customTable-assignment2">Phone Contact</th>
+    <th class="customTable-assignment2">Manager</th>
+  </tr>
+  <tr>
+    <td class="customTable-primaryColumn">1</td>
+    <td class="customTable-assignment2">Bob McDoodle</td>
+    <td class="customTable-assignment2">Portland, OR</td>
+    <td class="customTable-assignment2">Software engineer</td>
+    <td class="customTable-assignment2">1-123-456-7890</td>
+    <td class="customTable-assignment2">Coffee McScrooge</td>
+  </tr>
+  <tr>
+    <td class="customTable-primaryColumn">2</td>
+    <td class="customTable-assignment2">Todd Bark</td>
+    <td class="customTable-assignment2">Vancouver, WA</td>
+    <td class="customTable-assignment2">Kitchen Cleaner</td>
+    <td class="customTable-assignment2">1-123-456-7890</td>
+    <td class="customTable-assignment2">Boss Lady</td>
+  </tr>
+  <tr>
+    <td class="customTable-primaryColumn">3</td>
+    <td class="customTable-assignment2">Big Bertha</td>
+    <td class="customTable-assignment2">Vancouver, WA</td>
+    <td class="customTable-assignment2">House Manager</td>
+    <td class="customTable-assignment2">1-234-567-8901</td>
+    <td class="customTable-assignment2">Sara</td>
+  </tr>
+  <tr>
+    <td class="customTable-primaryColumn">4</td>
+    <td class="customTable-assignment2">Rainbow Dash</td>
+    <td class="customTable-assignment2">Ponyville</td>
+    <td class="customTable-assignment2">Super Awesome</td>
+    <td class="customTable-assignment2">12345</td>
+    <td class="customTable-assignment2">Princess Celestia</td>
+  </tr>
+  <tr>
+    <td class="customTable-primaryColumn">5</td>
+    <td class="customTable-assignment2">Duke Wellington the Third</td>
+    <td class="customTable-assignment2">Vancouveriea</td>
+    <td class="customTable-assignment2">Food reclamation</td>
+    <td class="customTable-assignment2">867-5309</td>
+    <td class="customTable-assignment2">Dutchess the lion in your living room</td>
+  </tr>
+</table>
+
 </body>
 
 </html>
