--- a/CS_290/assignment2/content.html
+++ b/CS_290/assignment2/content.html
@@ -7,6 +7,18 @@
 
 <body>
 
+<div class="nav_header">
+  <div>
+    <img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/osu_logo_small.png"></img>
+    <ul class="nav_items">
+      <li class="nav_item_bar">Menu 1</li>
+      <li class="nav_item_bar">Menu 2</li>
+      <li class="nav_item_bar">Menu 3</li>
+    </ul>
+    <img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/navigation_icon.png"></img>
+  </div>
+</div>
+
 <table class="customTable">
   <tr>
     <th class="customTable-assignment2"></th>
@@ -57,12 +69,6 @@
     <td class="customTable-assignment2">Dutchess the lion in your living room</td>
   </tr>
 </table>
-
-<dl>
-  <dt>Username:</dt><dd>praterj</dd>
-  <dt>Favorite Food:</dt><dd>Pizza</dd>
-  <dt>Favorite Drink:</dt><dd>Craft IPA</dd>
-</dl>
 
 </body>
 
