--- a/CS_290/assignment2/content.html
+++ b/CS_290/assignment2/content.html
@@ -9,13 +9,13 @@
 
 <div class="nav_header">
   <div>
-    <img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/osu_logo_small.png"></img>
     <ul class="nav_items">
+      <li class="nav_item_bar_logo"><img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/osu_logo_small.png"></img></li>
       <li class="nav_item_bar">Menu 1</li>
       <li class="nav_item_bar">Menu 2</li>
       <li class="nav_item_bar">Menu 3</li>
+      <li class="nav_item_bar_nav"><img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/navigation-icon.png"></img></li>
     </ul>
-    <img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/navigation_icon.png"></img>
   </div>
 </div>
 
@@ -33,7 +33,7 @@
     <td class="customTable-assignment2">Bob McDoodle</td>
     <td class="customTable-assignment2">Portland, OR</td>
     <td class="customTable-assignment2">Software engineer</td>
-    <td class="customTable-assignment2">1-123-456-7890</td>
+    <td class="customTable-assignment2">1-112-345-6789</td>
     <td class="customTable-assignment2">Coffee McScrooge</td>
   </tr>
   <tr>
