- CS_290 Assignemnt 2 work

--- a/CS_290/assignment2/content.html
+++ b/CS_290/assignment2/content.html
@@ -8,15 +8,16 @@
 <body>
 
 <div class="nav_header">
-  <div>
-    <ul class="nav_items">
-      <li class="nav_item_bar_logo"><img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/osu_logo_small.png"></img></li>
-      <li class="nav_item_bar">Menu 1</li>
-      <li class="nav_item_bar">Menu 2</li>
-      <li class="nav_item_bar">Menu 3</li>
-      <li class="nav_item_bar_nav"><img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/navigation-icon.png"></img></li>
-    </ul>
-  </div>
+  <ul class="nav_items">
+    <!--  Left navigation items (normal order) -->
+    <li class="nav_item"><img src="http://web.engr.oregonstate.edu/~praterj/CS_290/images/osu_logo_small.png"></img></li>
+    <li class="nav_item"><a href ="#">Menu 1</a></li>
+    <li class="nav_item"><a href ="#">Menu 2</a></li>
+    <li class="nav_item"><a href ="#">Menu 3</a></li>
+
+    <!--  Right navigation items (reverse order) -->
+    <li class="nav_item_nav"><a href ="#">Menu 4</a></li>
+  </ul>
 </div>
 
 <table class="customTable">
@@ -68,7 +69,85 @@
     <td class="customTable-assignment2">867-5309</td>
     <td class="customTable-assignment2">Dutchess the lion in your living room</td>
   </tr>
+  <tr>
+    <td colspan="2">Footer 1</td>
+    <td colspan="4">Footer 2</td>
+  </tr>
 </table>
+
+<div class="outer-content">
+  Outer Content
+
+  <div class="inner-content">
+    Inner Content
+  </div>
+</div>
+
+<form action="http://classes.engr.oregonstate.edu/eecs/winter2015/cs290-400/tools/class-content/form_tests/check_request.php" method="post" class="customTable2">
+  <fieldset>
+    <legend>Form entry (HTTP POST)</legend>
+    <table class="customTable2">
+      <tr>
+        <td class="customTable2_name">Text Input:</td>
+        <td class="customTable2_input"><input type="text" name="text_input"></td>
+      </tr>
+      <tr>
+        <td class="customTable2_name">Number Input:</td>
+        <td class="customTable2_input"><input type="number" name="numerical_input"></td>
+      </tr>
+      <tr>
+        <td class="customTable2_name">Password Input:</td>
+        <td class="customTable2_input"><input type="password" name="password_input"></td>
+      </tr>
+      <tr>
+        <td class="customTable2_name">Radio Select:</td>
+        <td class="customTable2_input">
+          <input type="radio" name="candy" value="Snickers">Snickers<br>
+          <input type="radio" name="candy" value="Skittles">Skittles<br>
+          <input type="radio" name="candy" value="Mentos">Mentos
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2" class="customTable2_name">
+          <input type="submit" value="Submit">
+        </td>
+      </tr>
+    </table>
+  </fieldset>
+</form>
+
+<form action="http://classes.engr.oregonstate.edu/eecs/winter2015/cs290-400/tools/class-content/form_tests/check_request.php" method="get" class="customTable2">
+  <fieldset>
+    <legend>Form response (HTTP GET)</legend>
+    <table class="customTable2">
+      <tr>
+        <td class="customTable2_name">Text Input:</td>
+        <td class="customTable2_input"><input type="text" name="text_input"></td>
+      </tr>
+      <tr>
+        <td class="customTable2_name">Number Input:</td>
+        <td class="customTable2_input"><input type="number" name="numerical_input"></td>
+      </tr>
+      <tr>
+        <td class="customTable2_name">Password Input:</td>
+        <td class="customTable2_input"><input type="password" name="password_input"></td>
+      </tr>
+      <tr>
+        <td class="customTable2_name">Radio Select:</td>
+        <td class="customTable2_input">
+          <input type="radio" name="candy" value="Snickers">Snickers<br>
+          <input type="radio" name="candy" value="Skittles">Skittles<br>
+          <input type="radio" name="candy" value="Mentos">Mentos
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2" class="customTable2_name">
+          <input type="submit" value="Submit">
+        </td>
+      </tr>
+    </table>
+  </fieldset>
+</form>
 
 </body>
 
