- Add table caption

--- a/CS_290/assignment2/content.html
+++ b/CS_290/assignment2/content.html
@@ -20,6 +20,8 @@
   </ul>
 </div>
 
+<div class="tableCaption">Personel report</div>
+
 <table class="customTable">
   <tr>
     <th class="customTable-assignment2"></th>
